Adding hidden input to edit modal that holds the day_id

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -119,7 +119,8 @@
             <span id="endTime"></span>
             <input type="hidden" name="doctor_id" value={{ selected_doctor._id }}>
             <input id="appointment_id" type="hidden" name="appointment_id" value>
-      <button type="submit" name="action">Cancel appointment</button>
+            <input id="day_id" type="hidden" name="day_id" value>
+            <button type="submit" name="action">Cancel appointment</button>
           </form>
       </div>
       <div class="modal-footer">
