--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,6 +24,17 @@ nav {
 }
 
 /*********Date picker********************/
+#sidebar {
+    min-width: 250px;
+    max-width: 250px;
+}
+
+#sidebar.active {
+    margin-left: -250px;
+}
+
+
+
 #flatpickr {
   display: none;
 }
