Changing the selected-date div to an inline-block

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,6 +53,7 @@ nav {
 }
 /*********Appointments grid**************/
 #selected-date {
+  display: inline-block;
   color: white;
   background-color: #569ff7;
   border-radius: 2px;
