--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -25,10 +25,9 @@
         <input id="flatpickr" name="date" type="text" value={{ date }}>
     </div>
      <div class="calendar-container col-7" data-dayid={{ day_id }}>
-     <div><span id="selected-date">{{ date }}</span></div>
+     <div id="selected-date"><span>{{ date }}</span></div>
      <button type="button" id="sidebarCollapse" class="btn btn-info">
-         <i class="fas fa-align-left"></i>
-        <span>Toggle Sidebar</span>
+         <i class="far fa-calendar-alt"></i>
 </button>
         {% for hour in calendar %}
             <div class="row no-gutters hour-container">
