--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,12 +25,12 @@ nav {
 
 /*********Date picker********************/
 #sidebar {
-    min-width: 250px;
-    max-width: 250px;
+    min-width: 310px;
+    max-width: 310px
 }
 
 #sidebar.active {
-    margin-left: -250px;
+    margin-left: -310px;
 }
 
 
