--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,11 +46,18 @@ nav {
 
 .datepicker-container {
   margin-left: 25px;
+
 }
 
 .calendar-container {
   margin-left: 25px;
+  max-width: 61vw;
 }
+
+@media(max-width:965px) {
+.calendar-container {
+max-width: 54vw;
+}}
 /*********Appointments grid**************/
 #selected-date {
   display: inline-block;
@@ -68,6 +75,7 @@ nav {
 
 .hour-container {
     height: 100px;
+
 }
 
 .hour {
@@ -75,6 +83,8 @@ nav {
   border-bottom: 1px solid white;
   border-radius: 3px;
   height: 100px;
+ /* min-width: 54px;*/
+  max-width: 55px;
   position: relative;
   text-align: center;
 }
@@ -85,6 +95,7 @@ nav {
 
 
 }
+
 
 .slot {
   height: 25%;
