Changing doctor name element to div

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -2,7 +2,7 @@
 <nav class="row no-gutters">
     <div class=" profile-wrapper">
         <img class="doc-cal-image" src={{ selected_doctor.profile_picture}}>
-        <span class="doc-cal-name">{{ selected_doctor.name}}</span>
+        <div class="doc-cal-name">{{ selected_doctor.name}}</div>
     </div>
     <div class="select-doc-wrapper">
             <select class="js-example-basic-single" name="doctor_id">
