Altering doctor profile class name, and adding positional style for the same

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 <nav class="row no-gutters">
-    <div class=" profile-wrapper">
+    <div class="doc-profile-wrapper">
         <img class="doc-cal-image" src={{ selected_doctor.profile_picture}}>
         <div class="doc-cal-name">{{ selected_doctor.name}}</div>
     </div>
