--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,11 @@ nav {
   border-bottom: 1px solid #d8e1e9 ;
 }
 
+.doc-profile-wrapper {
+    position: fixed;
+    left: 15px;
+}
+
 .select-doc-wrapper {
     position: fixed;
     right: 15px;
