Adding a close button to the datepicker, with initial styling for the same

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,9 +53,12 @@ nav {
 
 .datepicker-container {
   margin-left: 25px;
-
 }
 
+#datepicker-close {
+  width: 308px;
+  background-color: white;
+}
 
 /*********Sidebar**************/
 @media(max-width: 790px){
