--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -20,6 +20,7 @@
 <div class="row no-gutters main-container">
     <div id="sidebar" class="datepicker-container">
         <input id="flatpickr" name="date" type="text" value={{ date }}>
+        <div  id="datepicker-close"><button>Close</button></div>
     </div>
      <div class="calendar-container" data-dayid={{ day_id }}>
      <div id="selected-date"><span>{{ date }}</span></div>
