--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -20,11 +20,11 @@
 <div class="row no-gutters main-container">
     <div id="sidebar" class="datepicker-container">
         <input id="flatpickr" name="date" type="text" value={{ date }}>
-        <div  id="datepicker-close"><button>Close</button></div>
+        <div  id="datepicker-close"><button class="sidebarCollapse">Close</button></div>
     </div>
      <div class="calendar-container" data-dayid={{ day_id }}>
      <div id="selected-date"><span>{{ date }}</span></div>
-     <button type="button" id="sidebarCollapse" class="btn btn-info">
+     <button type="button" class="sidebarCollapse btn btn-info">
          <i class="far fa-calendar-alt"></i>
      </button>
         {% for hour in calendar %}
