--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,12 +15,12 @@ nav {
 }
 
 .doc-profile-wrapper {
-    position: relative;
+    position: absolute;
     left: 15px;
 }
 
 .select-doc-wrapper {
-    position: relative;
+    position: absolute;
     right: 15px;
 }
 .doc-cal-image {
