Adding modal-input classes, and removing borders and outlines for the same

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -190,6 +190,12 @@ nav {
   border-radius: 5px;
 }
 
+/*********Modals**************/
+.modal-input {
+  border: none;
+  outline: none;
+}
+
 /*
 .nav-tabs {
   border-bottom: 1px solid #dddddd;
