Removing borders and outline from modal select elements

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -204,6 +204,11 @@ nav {
   width: 40px;
 }
 
+.modal select {
+  border: none;
+  outline: none;
+}
+
 /*
 .nav-tabs {
   border-bottom: 1px solid #dddddd;
