Adding placeholder 'select patient' option to dropdown

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -85,6 +85,7 @@
             <div class="modal-new-patient">
                 <i class="fas fa-user-injured"></i>
                 <select class="js-example-basic-single" name="patient_id">
+                <option value="" disabled selected>Select patient</option>
                 {% for patient in patients %}
                 <option value={{patient._id}}>{{patient.name}}</option>
                 {% endfor %}
