Wrapping modal time elements in divs, moving them up in the block, and setting display to inline-block so as they're displayed on the same line as the date

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -214,6 +214,10 @@ nav {
   border-radius: 2px;
 }
 
+.modal-date, .modal-time {
+  display: inline-block;
+}
+
 /*
 .nav-tabs {
   border-bottom: 1px solid #dddddd;
