Adding id to the Cancel appointment button, and setting display to block

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -139,7 +139,7 @@
             <input class="modal-input" type="hidden" name="doctor_id" value={{ selected_doctor._id }}>
             <input class="modal-input" id="appointment_id" type="hidden" name="appointment_id" value>
             <input class="modal-input" id="day_id" type="hidden" name="day_id" value>
-            <button type="submit" name="action">Cancel appointment</button>
+            <button id="cancel-appointment" type="submit" name="action">Cancel appointment</button>
           </form>
       </div>
       <div class="modal-footer">
