Removing border from select doctor button, and adding background color for the same

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,6 +24,11 @@ nav {
     right: 15px;
     top: 15px;
 }
+
+.select-doc-wrapper button {
+  border: none;
+  background-color: #dceded;
+}
 .doc-cal-image {
   box-sizing: content-box;
   height: 50px;
