Increasing margin top on calendar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -108,8 +108,8 @@ nav {
 .calendar-container {
   margin-left: 2vw;
   width: 61vw;
-  margin-bottom: 12px
-  margin-top: 3px;
+  margin-bottom: 12px;
+  margin-top: 6px;
 }
 
 @media(max-width:956px) {
