Adding h1 element to entry page, with style to center text and add margin top

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,8 @@
 /*********Entry page************************/
+h1 {
+  text-align: center;
+  margin-top: 20px;
+}
 .doc-entry-image {
   height: 300px;
   width: 220px;
