--- a/templates/entry_page.html
+++ b/templates/entry_page.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}{% block content %}
+<h1>Select a doctor</h1>
 <div class="row no-gutters">
 {% for doctor in doctors %}
 <div class="col-3">
