--- a/templates/entry_page.html
+++ b/templates/entry_page.html
@@ -2,7 +2,7 @@
 <h1>Select a doctor</h1>
 <div class="row no-gutters">
 {% for doctor in doctors %}
-    <div class="col-12 col-md-6 col-lg-4 col-xl-3" data-docid={{ doctor._id }}>
+    <div class="doc-container col-12 col-md-6 col-lg-4 col-xl-3" data-docid={{ doctor._id }}>
         <div class="doc-wrapper">
             <img class="doc-entry-image" src={{ doctor.profile_picture }}>
             <span class="doc-entry-name">{{doctor.name}}</span>
