--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,24 @@ h1 {
   text-align: center;
   margin-top: 5px;
 }
+
+.doc-container {
+  margin-bottom: 20px;
+}
+
+.doc-wrapper {
+    width: 220px;
+    position: relative;
+    margin: 0 auto;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+.doc-wrapper:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    cursor: pointer;
+}
+
 .doc-entry-image {
   height: 300px;
   width: 220px;
