--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -121,7 +121,7 @@
         </button>
       </div>
       <div class="modal-body">
-          <form action="{{ url_for('remove_appointment') }}" method="POST">
+          <form action="{{ url_for('delete_appointment') }}" method="POST">
             <div class="modal-doctor">
                 <i class="fas fa-user-md"></i>
                 <span>{{ selected_doctor.name }}</span>
