Adding min-width to hour element to resolve sizing issue in smallest screensizes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -160,8 +160,7 @@ nav {
   border-radius: 3px;
   height: 100px;
   width: 12%;
- /* min-width: 54px
-  max-width: 55px;;*/
+  min-width: 50px;
   position: relative;
   text-align: center;
 }
