Adding unique id's for to modals for their endTime elements

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -88,7 +88,7 @@
                 <i class="far fa-clock"></i>
                 <input class="modal-input" id="startTime" type="text" name="start_time" value readonly>
                 <span>-</span>
-                <select id="endTime" class="js-example-basic-single" name="end_time"></select>
+                <select id="newApptEndTime" class="js-example-basic-single" name="end_time"></select>
             </div>
             <div class="modal-new-patient">
                 <i class="fas fa-user-injured"></i>
@@ -134,7 +134,7 @@
                 <i class="far fa-clock"></i>
                 <input class="modal-input" id="startTime" type="text" name="start_time" value readonly>
                 <span>-</span>
-                <select id="endTime" class="js-example-basic-single" name="end_time"></select>
+                <select id="editApptEndTime" class="js-example-basic-single" name="end_time"></select>
             </div>
             <div class="modal-new-patient">
                 <i class="fas fa-user-injured"></i>
